--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
 
 mainClassName = 'com.github.wakingrufus.microblog.Main'
 group = 'com.github.wakingrufus' // your group name
-version = '0.1.0'
+version = '0.2.0'
 
 repositories {
     mavenCentral()
@@ -23,6 +23,21 @@ jar {
 dependencies {
     compile 'org.slf4j:slf4j-log4j12:1.7.+' // for logging
     compile 'org.projectlombok:lombok:1.+'  // utilities for POJOs
+
+    compile 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.8.+'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.8.+'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.+'
+    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.8.+'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jaxrs:2.8.+'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.+'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.+'
+
+    compile 'org.glassfish.grizzly:grizzly-http-server:2.+'
+    compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.+'
+    compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.+'
+
+    compile 'org.glassfish.hk2:hk2-metadata-generator:2.+'
+
     testCompile 'junit:junit:4.+' // unit testing framework
 }
 
